# llmdb

./: .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  ARTEFACTS.md  CHANGELOG.md  CLAUDE.md  Makefile  PERFORMANCE.md  README.md  SECURITY.md  SPEC-LQL.md  SPECS  START.md  TASKS.md  docker-compose.yml  mypy.ini  pyproject.toml
.github/workflows/: ci.yml
docs/: agent-memory.md  architecture.md  bitemporal.md
docs/api/: index.md
docs/setup/: install.md  quick_start.md
examples/: ai_coding_agent_demo.py  bitemporal_demo.py  simple_client.py
scripts/: dev_setup.sh  run_server.sh
src/llmdb/: __init__.py  graph.py  kv.py  temporal.py  temporal_key.py  wasm_exec.py
src/llmdb/kv/: __init__.py  _codec.py
src/mcp_server/: __init__.py  config.py  server.py
src/mcp_server/handlers/: __init__.py  kv.py  ping.py
src/utilities/: __init__.py  logging.py
tests/integration/: test_mcp_roundtrip.py
tests/unit/: test_graph.py  test_kv.py  test_temporal.py
